syntax = "proto3";

package rental;

service RentalService {
  rpc RentApartment(RentApartmentRequest) returns (RentApartmentResponse) {}
}

message RentApartmentRequest {
  string user_id = 1;
  string apartment_id = 2;
  int32 duration_hours = 3;
}

message RentApartmentResponse {
  string rental_id = 1;
}
